front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: dapevi1997/front:kuber
          ports:
            - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: front-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 4200
      targetPort: 4200
  selector:
    app: front
