back-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: alpha.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alpha-service
                port:
                  number: 8080
    - host: beta.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beta-service
                port:
                  number: 8081
    - host: gama.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gama-service
                port:
                  number: 8082
